Testing Discord Bot again

--- a/register.html
+++ b/register.html
@@ -40,7 +40,7 @@
                     <label for="exp-date">Expiry date</label>
                     <input type="month" id="exp-date" name="exp-date">
                     <label for="CVV">CVV</label>
-                    <input type="text" id="CVV" name="CVV">
+                    <input type="text" id="CVV" name="cvv">
                     <button class="register-button">Create account</button>
                 </div>
             </form>
