--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
     <div class="register-box">
         <h2>Register</h2>
         <div id="user-info">
-            <form action="/register" method="POST">
+            <form action="/api/register" method="POST">
                 <div id="part1" class="register-form">
                     <label for="username">Full name</label>
                     <input type="text" id="username" name="name">
@@ -40,7 +40,7 @@
                     <label for="exp-date">Expiry date</label>
                     <input type="month" id="exp-date" name="exp-date">
                     <label for="CVV">CVV</label>
-                    <input type="text" id="CVV" name="cvv">
+                    <input type="text" id="CVV" name="CVV">
                     <button class="register-button">Create account</button>
                 </div>
             </form>
