--- a/TutoreMe.html
+++ b/TutoreMe.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="test.css">
     <script src="test.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="styles.css"></link>
+    <!-- <link rel="stylesheet" href="styles.css"></link> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
