Customers can now log in and out

--- a/register.html
+++ b/register.html
@@ -36,9 +36,9 @@
                 </div>
                 <div id="part2" class="register-form">
                     <label for="card-number">Credit card number</label>
-                    <input type="text" id="card-number" name="card-number">
+                    <input type="text" id="card-number" name="cardNumber">
                     <label for="exp-date">Expiry date</label>
-                    <input type="month" id="exp-date" name="exp-date">
+                    <input type="month" id="exp-date" name="expDate">
                     <label for="CVV">CVV</label>
                     <input type="text" id="CVV" name="CVV">
                     <button class="register-button">Create account</button>
