--- a/test.html
+++ b/test.html
@@ -28,10 +28,10 @@
           <h2 id="title">Sign In</h2>
           <p id="signin-type"></p>
         </div>
-        <form action="/login" method="POST">
+        <form action="/api/login" method="POST">
         <div class="field-class">
-          <label for="username">Username:</label>
-          <input type="text" class="input-form" id="username" name="username" />
+          <label for="email">Email:</label>
+          <input type="text" class="input-form" id="email" name="email" />
         </div>
         <div class="field-class">
           <label for="password">Password:</label>
@@ -54,7 +54,7 @@
         </div>
         <div class="field-class">
           <label for="username">Username:</label>
-          <input type="text" class="input-form" name="username" />
+          <input type="text" class="input-form" name="username" id="username" />
         </div>
         <div class="field-class">
           <label for="password">Password:</label>
