--- a/advanced-search.html
+++ b/advanced-search.html
@@ -25,17 +25,19 @@
         <h2 id="title">Sign In</h2>
         <p id="signin-type"></p>
     </div>
-    <div class="field-class">
-        <label for="username">Username:</label>
-        <input type="text" class="input-form" id="username" name="username" />
-    </div>
-    <div class="field-class">
-        <label for="password">Password:</label>
-        <input type="password" class="input-form" name="password" id="password" />
-    </div>
-    <div class="field-class">
-        <button id="login-button" onclick="checkLoginCredentials()" >Login</button>
-    </div>
+    <form action="/api/login" method="POST">
+        <div class="field-class">
+            <label for="email">Email:</label>
+            <input type="text" class="input-form" id="email" name="email" />
+        </div>
+        <div class="field-class">
+            <label for="password">Password:</label>
+            <input type="password" class="input-form" name="password" id="password" />
+        </div>
+        <div class="field-class">
+            <button id="login-button">Login</button>
+        </div>
+    </form>
 </div>
 
 <div id="content-block-register" class="overlayElemsRegister">
