adv-search/TutorMe/customers/client-customer-support completed

--- a/adminsettings.html
+++ b/adminsettings.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="test.css">
     <script defer src="test.js"></script>
     <!-- Redirects user to homepage if they are not admin -->
-    <script>if(!sessionStorage.getItem("admin-login")) {
+    <!-- <script>if(!sessionStorage.getItem("admin-login")) {
         alert("Error: unauthorized access \nPlease log in as an admin")
         window.location.href = "test.html";
-    }</script>
+    }</script> -->
 
 </head>
 <body>
