--- a/offered-services.html
+++ b/offered-services.html
@@ -6,6 +6,7 @@
     <title>Client order</title>
     <link rel="stylesheet" href="client_order_summary.css">
     <link rel="stylesheet" href="test.css">
+    <script src="frontEndAdminCheck.js"> </script>
     <script src="test.js"  defer></script>
 
     <!-- Redirects user to homepage if they are not admin -->
