--- a/register.html
+++ b/register.html
@@ -36,11 +36,13 @@
                 </div>
                 <div id="part2" class="register-form">
                     <label for="card-number">Credit card number</label>
-                    <input type="text" id="card-number" name="cardNumber">
+                    <input type="text" id="card-number" name="creditCardNumber">
                     <label for="exp-date">Expiry date</label>
-                    <input type="month" id="exp-date" name="expDate">
+                    <input type="month" id="exp-date" name="expiryDate">
                     <label for="CVV">CVV</label>
                     <input type="text" id="CVV" name="CVV">
+                    <label for="address">Home Address</label>
+                    <input type="text" name="address" id="address">
                     <button class="register-button">Create account</button>
                 </div>
             </form>
