Fixed admin login issues

--- a/adminsettings.html
+++ b/adminsettings.html
@@ -6,6 +6,7 @@
     <title>My Company Profile</title>
     <link rel="stylesheet" href="client_order_summary.css">
     <link rel="stylesheet" href="test.css">
+    <script src="frontEndAdminCheck.js"> </script>
     <script defer src="test.js"></script>
     <!-- Redirects user to homepage if they are not admin -->
     <!-- <script>if(!sessionStorage.getItem("admin-login")) {
