--- a/customers.html
+++ b/customers.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="client_order_summary.css">
   <link rel="stylesheet" href="customers.css">
   <link rel="stylesheet" href="test.css">
+  <script src="frontEndAdminCheck.js"> </script>
   <script defer src="test.js"></script>
 
   <!-- Redirects user to homepage if they are not admin -->
