--- a/adminsettings.html
+++ b/adminsettings.html
@@ -6,6 +6,7 @@
     <title>My Company Profile</title>
     <link rel="stylesheet" href="client_order_summary.css">
     <link rel="stylesheet" href="test.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
     <script src="frontEndAdminCheck.js"> </script>
     <script defer src="test.js"></script>
     <!-- Redirects user to homepage if they are not admin -->
