form submission bug + wrong href fixed

--- a/adminsettings.html
+++ b/adminsettings.html
@@ -44,7 +44,7 @@
     </div>
     <div class="field-class">
         <label for="Email">Email:</label>
-        <input type="email" class="input-form" name="Email" />
+        <input type="email" class="input-form" name="Email" id="Email" />
     </div>
     <div class="field-class">
         <label for="username">Username:</label>
@@ -85,7 +85,7 @@
 <div class="container-parent">
     <nav>
         <ul class="container-nav">   <!--reload separate pages instead of dynamically generating-->
-            <li><a href="client_settings.html">Company profile</a></li>
+            <li><a href="#">Company profile</a></li>
             <li><a href="offered-services.html">Offered services</a></li>
             <li><a href="customers.html">Customers</a></li>
 
