--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
     <div class="register-box">
         <h2>Register</h2>
         <div id="user-info">
-            <form action="/api/register" method="POST">
+            <form action="/api/register" method="POST" id="register-form">
                 <div id="part1" class="register-form">
                     <label for="username">Full name</label>
                     <input type="text" id="username" name="name">
