--- a/client-setting/client_order_summary.html
+++ b/client-setting/client_order_summary.html
@@ -10,7 +10,7 @@
     <script defer src="../test.js"></script>
     <script defer src="../client_settings.js"></script>
 </head>
-<body>
+<body style="margin:0">
 
 <div id="bill-overlay" class="billOverlayElems" onclick="closeBillOverlay()"></div>
 <div id="bill-content-block" class="billOverlayElems">
@@ -113,13 +113,6 @@
                 </tbody>
 
             </table>
-
-            <div class="container-prev-next">
-                <!--add functionality display next 10 entries-->
-                <button id="previous">Previous</button>
-                <button id="next">Next</button>
-            </div>
-            
 
         </div>
     </div>
