--- a/customers.html
+++ b/customers.html
@@ -99,7 +99,7 @@
     <ul class="container-nav">   <!--reload separate pages instead of dynamically generating-->
       <li><a href="adminsettings.html">Company profile</a></li>
       <li><a href="offered-services.html">Offered services</a></li>
-      <li><a href="customers.html">Customers</a></li>
+      <li><a href="customers.html">Customer overview</a></li>
 
 
     </ul>
@@ -107,7 +107,7 @@
   </nav>
 
   <div class="services-container">
-    <h1>Customers</h1>
+    <h1>Customer overview</h1>
     <!--Retain only one company-->
     <div id="my-customers">
       <div class="date-filter-container">
