--- a/offered-services.html
+++ b/offered-services.html
@@ -17,7 +17,7 @@
 
 
 </head>
-<body>
+<body style="margin:0">
     <script defer type="text/javaScript" src="offered-services.js"></script>
     <div id="overlay" class="overlayElems overlayElemsRegister" onclick="closeOverlay()"></div>
     <div id="content-block" class="overlayElems">
@@ -88,7 +88,7 @@
             <ul class="container-nav">   <!--reload separate pages instead of dynamically generating--> 
                 <li><a href="adminsettings.html">Company profile</a></li>
                 <li><a href="offered-services.html">Offered services</a></li>
-                <li><a href="customers.html">Customers</a></li>
+                <li><a href="customers.html">Customer overview</a></li>
 
 
             </ul>
