--- a/client-setting/client_settings.html
+++ b/client-setting/client_settings.html
@@ -10,7 +10,7 @@
     <script defer src="../test.js"></script>
     <script defer src="../client_settings.js"></script>
 </head>
-<body>
+<body style="margin:0">
 
 <div id="overlay" class="overlayElems overlayElemsRegister" onclick="closeOverlay()"></div>
 <div id="content-block" class="overlayElems">
@@ -94,31 +94,31 @@
             <h1 id="profile-settings-heading">Profile settings</h1>
 
             <label for="client-name">Name</label>
-            <input type="text" id="client-name" name="name" required>
+            <input type="text" id="client-name" class="client-input" name="name" required>
 
             <label for="client-email">Email</label>
-            <input type="email" id="client-email" name="email" required>
+            <input type="email" id="client-email" class="client-input" name="email" required>
 
             <label for="client-password">Password</label>
-            <input type="password" id="client-password" name="password" required>
+            <input type="password" id="client-password" class="client-input" name="password" required>
 
             <label for="client-address">Address</label>
-            <input type="text" id="client-address" name="address" required>
+            <input type="text" id="client-address" class="client-input" name="address" required>
 
             <label for="credit-card-number">Credit card number</label>
-            <input type="text" id="credit-card-number" name="creditCardNumber" required>
+            <input type="text" id="credit-card-number" class="client-input" name="creditCardNumber" required>
 
             <label for="expiry-date">Expiry date (M/D/Y)</label>
-            <input type="text" id="expiry-date" name="expiryDate" required>
+            <input type="text" id="expiry-date" class="client-input" name="expiryDate" required>
 
             <label for="cvv">CVV</label>
-            <input type="text" id="cvv" name="CVV" required>
+            <input type="text" id="cvv" name="CVV" class="client-input" required>
 
-            <input type="button" value="Delete account">
+            <input type="button" id="delete-button" value="Delete account">
             
             <div class="container-submit-discard">
-                <input type="submit" value="Save changes">    
-                <input type="reset" value="Discard">
+                <input type="submit" class="client-button" value="Save">    
+                <input type="reset" class="client-button" value="Discard">
             </div>    
 
         </form>
