last admin styling changes

--- a/adminsettings.html
+++ b/adminsettings.html
@@ -85,7 +85,7 @@
 <div class="container-parent">
     <nav>
         <ul class="container-nav">   <!--reload separate pages instead of dynamically generating-->
-            <li><a href="#">Company profile</a></li>
+            <li><a href="#" id="nav-order-summary">Company profile</a></li>
             <li><a href="offered-services.html">Offered services</a></li>
             <li><a href="customers.html">Customer overview</a></li>
 
