--- a/offered-services.html
+++ b/offered-services.html
@@ -87,7 +87,7 @@
         <nav>
             <ul class="container-nav">   <!--reload separate pages instead of dynamically generating--> 
                 <li><a href="adminsettings.html">Company profile</a></li>
-                <li><a href="offered-services.html">Offered services</a></li>
+                <li><a href="offered-services.html" id="nav-order-summary">Offered services</a></li>
                 <li><a href="customers.html">Customer overview</a></li>
 
 
