--- a/customers.html
+++ b/customers.html
@@ -99,7 +99,7 @@
     <ul class="container-nav">   <!--reload separate pages instead of dynamically generating-->
       <li><a href="adminsettings.html">Company profile</a></li>
       <li><a href="offered-services.html">Offered services</a></li>
-      <li><a href="customers.html">Customer overview</a></li>
+      <li><a href="customers.html" id="nav-order-summary">Customer overview</a></li>
 
 
     </ul>
